@@ -1,6 +1,7 @@
 >> 25.12.2010
 [CO]
 - Updated from "Cg Toookit 3.0 - July 2010" to "Cg Toookit 3.0 - November 2010"
+- Updated "Newton Game Dynamics" from "2.24" to "2.28" on Windows and "2.26" on Linux
 
 
 
