@@ -23,6 +23,7 @@
 //[-------------------------------------------------------]
 //[ Includes                                              ]
 //[-------------------------------------------------------]
+#include <PLMath/Matrix4x4.h>
 #include <PLRenderer/Renderer/VertexBuffer.h>
 #include <PLMesh/Mesh.h>
 #include <PLMesh/MeshManager.h>
@@ -129,7 +130,11 @@ BodyConvexHull::BodyConvexHull(PLPhysics::World &cWorld, MeshManager &cMeshManag
 
 	// Create the rigid body
 	if (pCollision) {
-		Newton::NewtonBody *pNewtonBody = NewtonCreateBody(pNewtonWorld, pCollision);
+		#if (NEWTON_MAJOR_VERSION == 2) && (NEWTON_MINOR_VERSION >= 28)
+			Newton::NewtonBody *pNewtonBody = NewtonCreateBody(pNewtonWorld, pCollision, Matrix4x4::Identity);
+		#else
+			Newton::NewtonBody *pNewtonBody = NewtonCreateBody(pNewtonWorld, pCollision);
+		#endif
 
 		// Initialize the Newton physics body
 		((BodyImpl&)GetBodyImpl()).InitializeNewtonBody(*this, *pNewtonBody, 0.0f);
