@@ -5,6 +5,7 @@ Changes in PixelLight 0.9.5-R1 (not yet released)
 - Change: Updated libvorbis from "1.3.1" to "1.3.2"
 - Change: Updated OpenEXR from "1.4.0" to "1.6.1"
 - Change: Updated from "Cg Toookit 3.0 - July 2010" to "Cg Toookit 3.0 - November 2010"
+- Change: Updated "Newton Game Dynamics" from "2.24" to "2.28" on Windows and "2.26" on Linux
 
 
 Changes in PixelLight 0.9.4-R1 (released on December 23, 2010)
